# pdfcrop

./: .gitignore  AUTHORS  LICENSE  README.ja.md  README.md  README.zh_CN.md  README.zh_TW.md  cSpell.json  main.py  pdfcrop.iss  pyproject.toml
.github/workflows/: release.yml
locale/en_US/LC_MESSAGES/: pdfcrop.mo  pdfcrop.po
locale/ja_JP/LC_MESSAGES/: pdfcrop.mo  pdfcrop.po
locale/zh_CN/LC_MESSAGES/: pdfcrop.mo  pdfcrop.po
locale/zh_TW/LC_MESSAGES/: pdfcrop.mo  pdfcrop.po
src/: __init__.py  config.py  container.py  error_handler.py  exceptions.py  i18n.py  logger.py
src/common/: __init__.py  base.py  mixins.py  protocols.py
src/models/settings/: __init__.py  settings.py
src/pyside_ui/: __init__.py  application.py  canvas.py  main_window.py  menu_manager.py  toolbar.py  viewer.py
src/pyside_ui/components/: __init__.py  interaction_handler.py  pdf_renderer.py  selection_manager.py
src/pyside_ui/controllers/: __init__.py  pdf_controller.py  window_controller.py
src/pyside_ui/services/: clipboard_manager.py  page_cache.py  pdf_handler.py
src/utils/: __init__.py  powershell_executor.py
tests/: __init__.py  test_basic.py  test_visible_page.py
